# book-data-api

./: .env.example  .gitignore  README.md  alembic.ini  main_api.py  pyproject.toml
alembic/: env.py
alembic/versions/: 23155a577560_create_users_table.py  5a13fa5c34f5_create_books_table.py
scripts/: csv_to_books_db.py  scrape_books.py
src/api/: auth.py  books.py  stats.py  utils.py
src/core/: config.py  crud.py  database.py  logging_config.py  models.py  schemas.py  security.py
