[project]
name = "book-data-api"
version = "0.1.0"
description = ""
authors = [
    {name = "diunkz",email = "noahdiunkz@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"

